<resources>
    <string name="app_name">MKK</string>
    <string name="empty" />
    <string name="dialog_next_button">Далее</string>
    <string name="dialog_cancel_button">Отмена</string>
    <string name="dialog_ok_button">OK</string>

    <!--SplashScreenFragment-->
    <string name="splash_screen_fragment_title">Мобильные Кассы\nКыргызстана</string>
    <string name="splash_screen_fragment_app_version">Версия %s</string>

    <!--RegistrationCashBoxFragment-->
    <string name="registration_cash_box_title">Регистрации кассы</string>
    <string name="registration_cash_box_name_subject">Наименовние субъекта</string>
    <string name="registration_cash_box_inn">ИНН субъекта</string>
    <string name="registration_cash_box_address_subject">Юридический адрес субъекта</string>
    <string name="registration_cash_box_dislocation_tax">Место налоговой регистрации</string>
    <string name="registration_cash_box_tax_mode">Налоговоый режим, применяемый субъектом</string>
    <string name="registration_cash_box_type_action">Вид деятельности субъекта</string>
    <string name="registration_cash_box_use_cash_box">ГДЕ БУДЕТ ИСПОЛЬЗОВАТЬСЯ МОБИЛЬНАЯ КАССА:</string>
    <string name="registration_cash_box_send_request">Отправить заявку на регистрацию</string>
    <string name="registration_cash_box_name_object">Наименование объекта</string>
    <string name="registration_cash_box_type_object">Вид объекта</string>
    <string name="registration_cash_box_address_object">Адрес места располжения объекта</string>
    <string name="registration_cash_box_information_cash_box">ИНФОРМАЦИЯ О КАССЕ:</string>
    <string name="registration_cash_box_model_KKM">Модель ККМ</string>
    <string name="registration_cash_box_contact_number">Контактный номер телефона субъкта</string>
    <string name="registration_cash_box_code_region">+7</string>

    <!-- ErrorMessageRegistrationCashBox -->
    <string name="error_name_subject">Укажите наименование субъекта</string>
    <string name="error_inn_subject">Укажите ИНН субъекта</string>
    <string name="error_address_subject">Укажите адресс субъекта</string>
    <string name="error_dislocation_tax">Выберите место налоговой регистрации</string>
    <string name="error_tax_mode">Выберите налоговый режим</string>
    <string name="error_contact_number">Введите контактный номер телефона</string>
    <string name="error_type_object">Укажите вид объекта</string>
    <string name="error_name_object">Укажите наименование объекта</string>
    <string name="error_address_object">Укажите адресс объекта</string>
    <string name="error_type_action">Укажите вид деятельности субъекта</string>
    <string name="error_request">Произошла ошибка</string>

    <!-- TaxMode -->
    <string name="tax_mode_special">Специальный налоговоый режим</string>
    <string name="tax_mode_regular">Обычный налоговоый режим</string>

    <!-- ClaimStatusFragment -->
    <string name="claim_status_title">Заявка принята</string>
    <string name="claim_status_date">Время последней проверки\nзаявки: %s</string>
    <string name="claim_status_close">Закрыть</string>
    <string name="claim_status_update">Обновить</string>
    <string name="claim_status_description_claim">Ваша заявка на регистрацию мобильной кассы отправлена в налоговую службу. Заявка будет рассмотрена в течение нескольких дней. Ожидайте сообщения.</string>

    <!-- RegistrationRefusalFragment -->
    <string name="registration_refusal_title">Отказ в регистрации</string>
    <string name="registration_refusal_description">К сожалению, ваша заявка на регистрацию мобильной кассы отклонена.</string>
    <string name="registration_refusal_comment_title">Комментарий сотрудника налоговой службы:</string>
    <string name="registration_refusal_name_employee">С уважением, сотрудник %s</string>
    <string name="registration_refusal_apply_again">Подать заявку снова</string>

    <!-- DialogSuccessRegistration -->
    <string name="dialog_success_registration_title">Успешная регистрация!</string>
    <string name="dialog_success_registration_description">Поздравляем, вы зарегистрировали мобильную кассу на своем смартфоне. Необходимо также зарегистрироваться в Личном кабинете.</string>

    <!-- RegistrationInPersonalAccountFragment -->
    <string name="registration_in_personal_account_title">Регистрация\nв Личном кабинете</string>
    <string name="registration_in_personal_account_description">Регистрация в личном кабинете необходима для электронной отчетности операций по кассе в\nналоговой службе.</string>
    <string name="registration_in_personal_account_login">Email</string>
    <string name="registration_in_personal_account_password">Пароль</string>
    <string name="registration_in_personal_account_condition_password">Пароль должен содержать цифры, минимум один спецсимвол, прописные и строчные буквы и состоять не менее из 8 символов.</string>
    <string name="registration_in_personal_account_registration">Зарегистрироваться</string>
    <string name="registration_in_personal_account_error_email">Некоректный Email</string>
    <string name="registration_in_personal_account_error_password">Пароль введен некоректно</string>

    <!-- DialogRegistrationInPersonalAccount -->
    <string name="dialog_success_registration_in_personal_account_title">Поздравляем!</string>
    <string name="dialog_success_registration_in_personal_account_description">Вы зарегистрировались в Личном кабинете.Может начинать работать.</string>
    <string name="dialog_failure_registration_in_personal_account_title">Ошибка</string>
    <string name="dialog_failure_registration_in_personal_account_description">При регистрации произошла ошибка. Такой e-mail уже зарегистрирован. Попробуйте еще раз.</string>

    <!-- MenuFragment -->
    <string name="menu_toolbar_title">Меню</string>
    <string name="menu_open_shift">Открыть смену</string>
    <string name="menu_sale">Продажа</string>
    <string name="menu_list_checks">Список чеков</string>
    <string name="menu_list_reports">Список отчетов</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_turn_off_cash_box">Выключить кассу</string>
    <string name="menu_close_shift">Закрытие смены</string>
    <string name="menu_generate_report">Сформировать Х-отчет</string>
    <string name="menu_dialog_cashier">Кассир смены</string>
    <string name="menu_dialog_name_cashier">Имя, фамилия кассира</string>
    <string name="menu_snackbar_open_shift">Новая смена открыта. Удачной работы!</string>
    <string name="menu_dialog_close_shift_title">Закрыть смену</string>
    <string name="menu_dialog_close_shift_description">Вы действительно хотите закрыть смену и сформировать Z-отчет?</string>
    <string name="menu_dialog_close_shift_pos_button">Закрыть смену</string>
    <string name="menu_dialog_shift_closed_title">Смена закрыта</string>
    <string name="menu_dialog_shift_closed_description">Смена закрыта.Z-отчет сформирован и отправлен на печать.</string>
    <string name="menu_dialog_invalid_name_cashier">Некорректное имя кассира</string>

    <!-- SaleFragment -->
    <string name="sale_empty_product">Пока нет\nникаких товаров</string>
    <string name="sale_add_product_or_scan">Нажмите “Добавить товар”\nили иконку сканирования\nштрих-кода</string>
    <string name="sale_add_product">Добавить товар</string>
    <string name="sale_pay">Оплатить</string>
    <string name="sale_init_value">0</string>
    <string name="sale_product_code">Товар / Код товара</string>
    <string name="sale_amount">Кол-во * Цена</string>
    <string name="sale_price_product">Итог</string>
    <string name="sale_general_price">Некорректное имя кассира</string>
    <string name="sale_title_general_price">Итого К ОПЛАТЕ:</string>
    <string name="sale_item_product">%s</string>
    <string name="sale_item_product_code">Код товара: %s</string>
    <string name="sale_item_amount">%s</string>
    <string name="sale_item_price">&#160;x %s</string>
    <string name="sale_item_general_price">%s</string>
    <string name="sale_close_dialog_title">Закрыть экран</string>
    <string name="sale_close_dialog_description">Вы точно хотите закрыть экран?</string>

    <!-- AddProductFragment -->
    <string name="add_product_title">Добавить товар</string>
    <string name="add_product_product">Товар</string>
    <string name="add_product_units">Единица измерения</string>
    <string name="add_product_units_kg">кг</string>
    <string name="add_product_units_liter">л</string>
    <string name="add_product_units_piece">шт</string>
    <string name="add_product_price_kg">Цена за кг, сом</string>
    <string name="add_product_price_liter">Цена за л, сом</string>
    <string name="add_product_price_piece">Цена за шт, сом</string>
    <string name="add_product_amount_piece">Количество, шт.</string>
    <string name="add_product_amount_liter">Обьем, л</string>
    <string name="add_product_amount_kg">Вес, г</string>
    <string name="add_product_marking_code">Код маркировки</string>
    <string name="add_product_product_code">Код товара</string>
    <string name="add_product_add_check">Добавить к чеку %.1f</string>
    <string name="add_product_undefine_units">Любая</string>
    <string name="add_product_undefine_price">Укажите цену</string>
    <string name="add_product_undefine_amount">Укажите вес</string>
    <string name="add_product_invalid_product">Введите наименование товара</string>
    <string name="add_product_invalid_units">Введите единицы измерения</string>
    <string name="add_product_invalid_price">Введите цену</string>
    <string name="add_product_invalid_amount">Введите количество</string>
    <string name="add_product_invalid_product_code">Введите код товара</string>

    <!-- PasswordFragment -->
    <string name="password_number_one">1</string>
    <string name="password_number_two">2</string>
    <string name="password_number_three">3</string>
    <string name="password_number_four">4</string>
    <string name="password_number_five">5</string>
    <string name="password_number_six">6</string>
    <string name="password_number_seven">7</string>
    <string name="password_number_eight">8</string>
    <string name="password_number_nine">9</string>
    <string name="password_number_zero">0</string>
    <string name="password_exit">Выйти</string>
    <string name="password_create">Создание пин-кода</string>
    <string name="password_continue">Продолжить</string>
    <string name="password_enter_code">Введите пин-код</string>
</resources>
