<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/WhiteBackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            style="@style/GreenToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_qr_code"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/menu_sale" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEmptyProduct"
        style="@style/Text.Gray.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/sale_empty_product"
        app:layout_constraintBottom_toTopOf="@id/tvAddProductOrScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAddProductOrScan"
        style="@style/Text.Gray.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sale_add_product_or_scan"
        app:layout_constraintBottom_toTopOf="@id/btnAddProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <com.mkk.ru.presentation.customview.ButtonWithTopIcon
        android:id="@+id/btnAddProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/sale_add_product"
        app:backgroundColor="@color/orange"
        app:icon="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAmount"
        app:layout_constraintStart_toStartOf="parent" />

    <com.mkk.ru.presentation.customview.PaymentButton
        android:id="@+id/btnAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        app:iconCurrency="@drawable/ic_currency"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnAddProduct"
        app:layout_constraintTop_toTopOf="@+id/btnAddProduct"
        app:textAmount="@string/sale_init_value"
        app:textDescription="@string/sale_pay"/>

</androidx.constraintlayout.widget.ConstraintLayout>
