<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_16">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProduct"
        style="@style/Text.DarkGray.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tvProductCode"
        app:layout_constraintEnd_toStartOf="@id/tvAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sale_item_product" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProductCode"
        style="@style/Text.LightGray.12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProduct"
        tools:text="@string/sale_item_product_code" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPrice"
        style="@style/Text.Gray.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="@id/tvProductCode"
        app:layout_constraintEnd_toStartOf="@id/tvGeneralPrice"
        app:layout_constraintStart_toEndOf="@id/tvAmount"
        app:layout_constraintTop_toTopOf="@id/tvProduct"
        tools:text="@string/sale_item_price" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAmount"
        style="@style/Text.Gray.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintBottom_toBottomOf="@id/tvProductCode"
        app:layout_constraintEnd_toStartOf="@id/tvPrice"
        app:layout_constraintStart_toEndOf="@id/tvProduct"
        app:layout_constraintTop_toTopOf="@id/tvProduct"
        tools:text="@string/sale_item_amount" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvGeneralPrice"
        style="@style/Text.Black.16.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintBottom_toBottomOf="@id/tvProductCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPrice"
        app:layout_constraintTop_toTopOf="@id/tvProduct"
        tools:text="@string/sale_item_general_price" />
</androidx.constraintlayout.widget.ConstraintLayout>
