<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/WhiteBackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCreate"
        style="@style/Text.TealBasic.20.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_create"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ivSecondDot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvEnterCode"
        style="@style/Text.TealBasic.20.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_enter_code"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ivSecondDot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        style="@style/OutlinedTealBasicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/password_continue"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSecondDot" />

    <ImageView
        android:id="@+id/ivFirstDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circle"
        app:layout_constraintBottom_toTopOf="@id/clLayout"
        app:layout_constraintEnd_toStartOf="@id/ivSecondDot"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSecondDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:src="@drawable/ic_circle"
        app:layout_constraintBottom_toBottomOf="@id/ivFirstDot"
        app:layout_constraintEnd_toStartOf="@id/ivThirdDot"
        app:layout_constraintStart_toEndOf="@id/ivFirstDot"
        app:layout_constraintTop_toTopOf="@id/ivFirstDot" />

    <ImageView
        android:id="@+id/ivThirdDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:src="@drawable/ic_circle"
        app:layout_constraintBottom_toBottomOf="@id/ivSecondDot"
        app:layout_constraintEnd_toStartOf="@id/ivFourthDot"
        app:layout_constraintStart_toEndOf="@id/ivSecondDot"
        app:layout_constraintTop_toTopOf="@id/ivSecondDot" />

    <ImageView
        android:id="@+id/ivFourthDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:src="@drawable/ic_circle"
        app:layout_constraintBottom_toBottomOf="@id/ivThirdDot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivThirdDot"
        app:layout_constraintTop_toTopOf="@id/ivThirdDot" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOne"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/password_number_one"
            app:layout_constraintBottom_toTopOf="@id/btnFour"
            app:layout_constraintEnd_toStartOf="@id/btnTwo"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTwo"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_number_two"
            app:layout_constraintBottom_toBottomOf="@id/btnOne"
            app:layout_constraintEnd_toStartOf="@id/btnThree"
            app:layout_constraintStart_toEndOf="@id/btnOne"
            app:layout_constraintTop_toTopOf="@id/btnOne" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnThree"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_4"
            android:text="@string/password_number_three"
            app:layout_constraintBottom_toBottomOf="@id/btnTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnTwo"
            app:layout_constraintTop_toTopOf="@id/btnTwo" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFour"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/password_number_four"
            app:layout_constraintBottom_toTopOf="@id/btnSeven"
            app:layout_constraintEnd_toStartOf="@id/btnFive"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnOne" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFive"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_number_five"
            app:layout_constraintBottom_toBottomOf="@id/btnFour"
            app:layout_constraintEnd_toStartOf="@id/btnSix"
            app:layout_constraintStart_toEndOf="@id/btnFour"
            app:layout_constraintTop_toTopOf="@id/btnFour" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSix"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_4"
            android:text="@string/password_number_six"
            app:layout_constraintBottom_toBottomOf="@id/btnFour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnFive"
            app:layout_constraintTop_toTopOf="@id/btnFour" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSeven"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/password_number_seven"
            app:layout_constraintBottom_toTopOf="@id/btnZero"
            app:layout_constraintEnd_toStartOf="@id/btnEight"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnFour" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEight"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_number_eight"
            app:layout_constraintBottom_toBottomOf="@id/btnSeven"
            app:layout_constraintEnd_toStartOf="@id/btnNine"
            app:layout_constraintStart_toEndOf="@id/btnSeven"
            app:layout_constraintTop_toTopOf="@id/btnSeven" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNine"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_4"
            android:text="@string/password_number_nine"
            app:layout_constraintBottom_toBottomOf="@id/btnEight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnEight"
            app:layout_constraintTop_toTopOf="@id/btnEight" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvExit"
            style="@style/Text.TealBasic.20.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/password_exit"
            app:layout_constraintBottom_toBottomOf="@id/btnZero"
            app:layout_constraintEnd_toEndOf="@id/btnSeven"
            app:layout_constraintStart_toStartOf="@id/btnSeven"
            app:layout_constraintTop_toTopOf="@id/btnZero" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnZero"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_number_zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btnEight"
            app:layout_constraintStart_toStartOf="@id/btnEight"
            app:layout_constraintTop_toBottomOf="@id/btnEight" />

        <ImageButton
            android:id="@+id/btnDelete"
            style="@style/PasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@id/btnZero"
            app:layout_constraintEnd_toEndOf="@id/btnNine"
            app:layout_constraintStart_toEndOf="@id/btnEight"
            app:layout_constraintTop_toTopOf="@id/btnZero" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
